fixed the scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -178,21 +178,32 @@ body {
   text-decoration: none;
 }
 
-@media screen and (max-width:1200px) {
-  .detail-image {
-    width: 300px;
-    height: 300px;
-  }
-
-
+@media screen and (max-width:1366px) {
   .react-horizontal-scrolling-menu--scroll-container {
-    width: 500px;
+    width: 750px;
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: hidden;
   }
 
   .left-arrow,
   .right-arrow {
     position: static !important;
   }
+  }
+
+
+@media screen and (max-width:1200px) {
+  .detail-image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .react-horizontal-scrolling-menu--scroll-container {
+    width:500px
+  }
+
 
   .hero-banner-img {
     display: none;
